# TaskbarXI-Rust

./: .gitignore  Cargo.toml  README.md  build.rs  test-coverage.sh
.cargo/: config.toml
.githooks/: pre-commit
Taskbar11-Rust/: Cargo.toml
src/: data.rs  lib.rs  main.rs  processes.rs  taskbar.rs  taskbars.rs  w11.rs  window.rs  windowregion.rs
tests/: taskbars.rs  window.rs  windowregion.rs
