[package]
name = "taskbar11_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1"
