[package]
name = "taskbar11"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }

[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi"
]

[build-dependencies]
winres = "0.1"
